# nasa_oddyssey

./: Cargo.toml  README.MD  app.properties
src/: main.rs
src/assets/: icons.rs  mod.rs
src/core/: client.rs  connection.rs
src/data/: apod.rs  home.rs  launcher.rs  mod.rs  navigation.rs  newos.rs  rover.rs
src/ui/: apod_view.rs  home_view.rs  launchers_view.rs  mod.rs  newos_view.rs  rover_view.rs
