[package]
name = "nasa_odyssey"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = {version = "0.8.3",features = ["default","serde","ico","svg"]}
lazy_static = "1.4.0"
tokio = { version = "1.38.0", features = ["full"] }
http-body-util = "0.1.2"
reqwest = { version = "0.11.22", features = ["default", "json"] }
app_properties = "0.1.2"
simple-hyper-client={version = "0.1.3"}
native-tls = "0.2.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"

